# custom-sam-peft

./: .dockerignore  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  pyproject.toml
.config/: markdownlint-cli2.jsonc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  ghcr-retention.yml  pr-colab-badge.yml  reauthor-dependabot.yml  security.yml
cloud/docker/: README.md
cloud/runpod/: README.md
configs/examples/: coco_bbox_qlora.yaml  coco_text_auto_split.yaml  coco_text_lora.yaml  coco_text_lora_subset.yaml  coco_text_no_val.yaml  coco_text_qlora.yaml  gpu_smoke_lora.yaml  gpu_smoke_qlora.yaml  min_gpu_qlora.yaml
docs/: ARCHITECTURE.md  README-dev.md  RELEASING.md  config-schema.md  defaults-provenance.md  public-flip-runbook.md
docs/research/: 2026-05-23-issue-79-older-cuda-feasibility.md  2026-05-24-issue-137-qlora-8gb-feasibility.md  2026-05-30-issue-197-plateau-lr-decay-early-stopping-lit-review.md  2026-05-30-issue-88-box-hint-curriculum-lit-review.md  2026-06-01-issue-230-peft-adaptation-surface-lit-review.md  2026-06-02-issue-250-eval-perf-attribution.md  2026-06-03-issue-253-cpu-parallelism-audit.md  2026-06-03-issue-254-fast-intraining-metric.md  2026-06-03-issue-273-algo-cuda-audit.md
docs/spikes/: 2026-06-04-trunk-feature-cache-disk-respike.md  2026-06-04-trunk-feature-cache-spike.md
docs/superpowers/: .markdownlint.json  QUESTIONS-issue-131.md
docs/testing/: gpu-audit-2026-05-24.md  gpu-evidence-5070ti.md  gpu-evidence-colab-t4.md  gpu-test-policy.md  local-pascal-gpu-testing.md  manual-gpu-pass-2026-05-19.md  manual-gpu-pass-2026-05-24-gtx1080.md
logs/: TODO.md  log.md
notebooks/: README.md  colab_gpu_tests.ipynb  custom_sam_peft_train.ipynb  esam3_train.ipynb
notebooks/_lib/: notebook_helpers.py
scripts/: _derive_preset_constants.py  attribute_profile.py  bench_multiplex_throughput.py  check_gpu_evidence.sh  profile_eval_250.py  run_gpu_tests.sh  spike_trunk_cache_feasibility.py  sweep_proxy_gate.py
src/custom_sam_peft/: __init__.py  _bootstrap.py  _provenance.py  _provenance_check.py  diagnostics.py  errors.py  notebook_helpers.py  oom.py  presets.py  profiling.py  profiling_report.py
src/esam3/: __init__.py  _bootstrap.py  _registry.py  diagnostics.py  notebook_helpers.py
tests/: conftest.py  test_defaults_provenance.py
tests/cli/: test_dry_run_cli.py  test_emitted_commands.py  test_eval_surface.py  test_export_onnx_surface.py  test_export_surface.py  test_finalize.py  test_flag_consistency.py  test_host_ram_cli.py  test_init_surface.py  test_options_unit.py  test_overrides_cli.py  test_positional_config.py  test_predict_surface.py  test_profile_surface.py  test_run_single_eval.py  test_time_limit_cli.py  test_time_limit_message.py  test_verbose_help.py
tests/config/: test_duration.py  test_lr_schedule_config.py  test_num_workers_default.py  test_plateau_config.py  test_schema_time_limit.py  test_semantic_loss_config.py  test_semantic_schema.py
tests/eval/: test_artifacts.py  test_gt_counts_part1.py  test_read_cache_part2.py
tests/export/: test_onnx_export.py  test_rope_export_patch.py
tests/fixtures/: make_tiny_coco.py  stub_peft_adapter.py  tiny_sam3_lora_stub.py  tiny_sam3_stub.py
tests/gpu/: conftest.py  test_bf16_faithful.py  test_calibrate_real.py  test_channel_adapter_gpu.py  test_grad_checkpointing.py  test_multiplex_vram.py  test_peft_scope_coverage_gpu.py  test_postprocess_pinned_transfer_gpu.py  test_predict_budget_warning.py  test_predict_nchannel_gpu.py  test_qlora_8gb_ceiling.py  test_qlora_load_attached.py  test_real_train_overfits.py  test_real_train_qlora.py  test_real_train_qlora_resume.py  test_run_end_to_end_gpu.py  test_semantic_eval_gpu.py  test_semantic_train_step_gpu.py  test_tiling_gpu.py  test_trunk_cache_replay_gpu.py
tests/helpers/: lora_predicates.py
tests/integration/: test_cli_run.py  test_eval_visualize_integration.py  test_load_sam31_real.py  test_peft_extensibility.py  test_peft_lora_real.py  test_peft_qlora_real.py  test_tracker_swap.py  test_train_end_to_end.py  test_train_resume.py  test_train_then_eval.py  test_trainer_evaluator_seam.py
tests/predict/: conftest.py  test_adapter_detect.py  test_cli_predict.py  test_config_layering.py  test_dry_run.py  test_dtype_coercion.py  test_gpu_predict.py  test_inputs.py  test_onnx_predict.py  test_onnx_torchfree.py  test_predict_fits_8gb.py  test_predict_oom_ladder.py  test_preprocessing_parity.py  test_prompts.py  test_runner_smoke.py  test_visualize.py  test_writers.py
tests/train/: test_best_clobber_regression.py  test_checkpoint_retention.py  test_close_out.py  test_early_stop_integration.py  test_early_stop_signal.py  test_host_ram_guard.py  test_ladder.py  test_ladder_resume.py  test_ladder_tick.py  test_plateau_scheduler.py  test_plateau_val_fallback.py  test_time_limit_noop.py  test_time_limit_resume.py  test_time_limit_stop.py
tests/unit/: test_aug_presets.py  test_bootstrap.py  test_box_hint_schedule.py  test_calibrate_cmd.py  test_channel_adapter.py  test_channel_semantics.py  test_checkpoint_roundtrip.py  test_cli.py  test_cli_doctor.py  test_cli_doctor_config.py  test_cli_doctor_semantic.py  test_cli_error_rendering.py  test_cli_export.py  test_cli_export_semantic.py  test_cli_flags.py  test_cli_init.py  test_coco_tiling.py  test_config_examples.py  test_config_loader.py  test_config_schema.py  test_config_template_default.py  test_conftest_tiers.py  test_construct_raw_model_grad_ckpt.py  test_data_apply_transforms_bbox_drop.py  test_data_base.py  test_data_coco.py  test_data_coco_limit.py  test_data_collate.py  test_data_deps_smoke.py  test_data_hf.py  test_data_hf_limit.py  test_data_import_boundary.py  test_data_io.py  test_data_mask_png.py  test_data_schema_extensions.py  test_data_semantic_hf.py  test_data_subset.py  (+129 more)
(+304 files in other folders)
