[project]
name = "efficient-sam3-finetuning"
version = "0.0.1"
description = "Parameter-efficient finetuning of SAM3.1 on niche image datasets."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "Justin Nguyen" }]
dependencies = [
  "torch>=2.4",
  "transformers>=5.0",
  "peft>=0.13",
  "datasets>=3.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "pyyaml>=6.0",
  "pycocotools>=2.0",
  "numpy>=1.26",
  "rich>=13",
  "pillow>=10",
  "albumentations>=1.4",
  "opencv-python-headless>=4.10",
  "scipy>=1.10",
  "einops>=0.7",
  "sam3 @ git+https://github.com/facebookresearch/sam3@2814fa619404a722d03e9a012e083e4f293a4e53",
]

[project.optional-dependencies]
wandb = ["wandb>=0.18"]
qlora = ["bitsandbytes>=0.43"]
tensorboard = ["tensorboard>=2.18"]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=4",
  "types-PyYAML>=6",
]

[project.scripts]
esam3 = "esam3.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/esam3"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/esam3/cli/*_cmd.py" = ["B008"]
"tests/unit/test_data_*.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/esam3"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "pycocotools.*",
  "bitsandbytes.*",
  "wandb.*",
  "tensorboard.*",
  "albumentations.*",
  "cv2",
  "datasets.*",
  "scipy.*",
  "sam3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end tests using the stub model (CPU)",
  "gpu: tests requiring a CUDA device with real SAM3.1 weights",
  "requires_checkpoint: skip unless real checkpoint is present",
  "requires_compatible_gpu: skip unless CUDA CC >= 7.5",
]
addopts = "-ra --strict-markers --cov=esam3 --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/esam3"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
