[project]
name = "custom-sam-peft"
dynamic = ["version"]
description = "Closed-vocab finetuning of SAM-family models with LoRA / QLoRA on a single consumer GPU"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Justin Nguyen" }]
dependencies = [
  "torch>=2.4",
  "transformers>=5.0",
  "peft>=0.13",
  "datasets>=3.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "pyyaml>=6.0",
  "pycocotools>=2.0",
  "numpy>=1.26",
  "rich>=13",
  "pillow>=10",
  "tifffile>=2024.1",
  "albumentations>=1.4",
  "opencv-python-headless>=4.10",
  "scipy>=1.10",
  "einops>=0.7",
  "huggingface-hub>=0.30",
  "sam3 @ git+https://github.com/facebookresearch/sam3@2814fa619404a722d03e9a012e083e4f293a4e53",
]

[project.optional-dependencies]
wandb = ["wandb>=0.18"]
qlora = ["bitsandbytes>=0.43"]
tensorboard = ["tensorboard>=2.18"]
jupyter = ["jupyterlab>=4"]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=4",
  "types-PyYAML>=6",
]

[project.scripts]
custom-sam-peft = "custom_sam_peft.cli.main:app"
csp = "custom_sam_peft.cli.main:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/custom_sam_peft"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0+unknown"

[tool.hatch.build.hooks.vcs]
version-file = "src/custom_sam_peft/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
# Excluded so Colab form-widget tokens (`#@param`) survive — ruff format
# converts them to `# @param`, which Colab does not recognize as a widget.
# `_version.py` is regenerated by hatch-vcs on every build — formatting churns it.
exclude = ["notebooks/*.ipynb", "src/custom_sam_peft/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "S", "T20"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/custom_sam_peft/cli/*_cmd.py" = ["B008"]
# Predict runner's dry-run preview writes plain-text stdout (grep-friendly,
# bypasses Rich word-wrap on long paths); print() is the appropriate primitive.
"src/custom_sam_peft/predict/runner.py" = ["T201"]
"tests/unit/test_data_*.py" = ["E402"]
"tests/**/*.py" = ["S101", "S105", "S311"]
# Preset table is aligned tabularly for readability vs spec §5; "×" is intentional.
"src/custom_sam_peft/data/aug_presets.py" = ["E501", "RUF003"]
# Generated by hatch-vcs; do not lint.
"src/custom_sam_peft/_version.py" = ["RUF022"]
# Greek letters (α, γ) and × are intentional in citations / formulas — domain notation.
"src/custom_sam_peft/models/losses/presets.py" = ["RUF002", "RUF003"]
"src/custom_sam_peft/models/losses/terms/box.py" = ["RUF002", "RUF003"]
"tests/unit/test_loss_terms.py" = ["RUF003"]
# Colab notebook: subprocess.run("git", ...) with partial path is intentional in a Colab
# environment where git is always on PATH; asserts are runtime environment guards.
# T201 (bare print) is the expected interaction model for notebooks.
"notebooks/**" = ["S101", "S603", "S607", "T201"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/custom_sam_peft"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "pycocotools.*",
  "bitsandbytes.*",
  "wandb.*",
  "tensorboard.*",
  "albumentations.*",
  "cv2",
  "datasets.*",
  "scipy.*",
  "sam3.*",
  "peft.*",
  "google.colab",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end tests using the stub model (CPU)",
  "gpu: tests requiring a CUDA device with real SAM3.1 weights",
  "gpu_inspection: cheap GPU-gated structural/forward tests (Tier 1); see docs/testing/gpu-test-policy.md",
  "requires_checkpoint: skip unless real checkpoint is present",
  "requires_compatible_gpu: skip unless CUDA CC >= 7.5",
]
addopts = "-ra --strict-markers --cov=custom_sam_peft --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["src/custom_sam_peft"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
